fixed horizontal scroll, sorting and adeed rendering on item.html

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+html {
+    overflow-x: hidden
+}
+
 body {
 width: 100%;
 }
@@ -18,7 +22,7 @@ table td {
 
 .items-management .items-list img {
     width: 100px;
-<<<<<<< HEAD
+
 }
 
 .topmenu {
@@ -28,6 +32,5 @@ table td {
 
 .search {
 	float: right;
-=======
->>>>>>> fa7507bb03d51524c8103d588f4e9aa74b5442b1
+
 }
